# ProyectoIntegrador

./: CMakeLists.txt  Episodio.cpp  Episodio.h  Pelicula.cpp  Pelicula.h  Película.h  Serie.cpp  Serie.h  Video.cpp  Video.h  main.cpp  sonar-project.properties
.github/workflows/: build.yml
test/: CMakeLists.txt  test_episodio.cpp  test_main.cpp  test_pelicula.cpp  test_serie.cpp  test_video.cpp
